Fix sizing/spacing of `recently-pushed-branches-enhancements`
Fixes #3333

--- a/source/features/recently-pushed-branches-enhancements.css
+++ b/source/features/recently-pushed-branches-enhancements.css
@@ -8,7 +8,6 @@
 
 .rgh-recently-pushed-branches [data-url$='recently_touched_branches_list'] .mb-3 {
 	margin-bottom: 0 !important;
-	max-height: 42px; /* Only cover the actions when there are multiple branches + :hover */
 	position: absolute;
 	top: -19px;
 	right: 10px;
@@ -96,7 +95,7 @@
 .rgh-recently-pushed-branches .Header .RecentBranches-item, /* Pre "Repository refresh" layout */
 .rgh-recently-pushed-branches [data-url$='recently_touched_branches_list'] .Box-row {
 	color: inherit;
-	padding: 4px !important;
+	padding: 4px 6px !important;
 }
 
 .rgh-recently-pushed-branches .RecentBranches:not(:hover) .RecentBranches-item:not(:last-child), /* Pre "Repository refresh" layout */
